@@ -1,15 +1,15 @@
 imagesdir = $(kde_datadir)/amarok/images
 images_DATA = amaroKonlyHG_w320.jpg eq_active.png eq_inactive.png \
-	hi16-action-effect.png hi16-action-noatunback.png \
-	hi16-action-noatunforward.png hi16-action-noatunpause.png \
-	hi16-action-noatunplaylist.png hi16-action-noatunplay.png \
-	hi16-action-noatunstop.png hi22-action-noatunback.png \
-	hi22-action-noatunfback.png hi22-action-noatunfforward.png \
-	hi22-action-noatunforward.png hi22-action-noatunloopnone.png \
-	hi22-action-noatunloopplaylist.png hi22-action-noatunlooprandom.png \
-	hi22-action-noatunloopsong.png hi22-action-noatunpause.png \
-	hi22-action-noatunplaylist.png hi22-action-noatunplay.png \
-	hi22-action-noatunstop.png hi22-action-noatuntiny.png \
+	b_next.png \
+	b_next_down.png \
+	b_pause.png \
+	b_pause_down.png \
+	b_play.png \
+	b_play_down.png \
+	b_prev.png \
+	b_prev_down.png \
+	b_stop.png \
+	b_stop_down.png \
 	logo_new_active.png logo_new_inactive.png \
 	numbers_transp.png pl_active.png \
 	pl_inactive.png \
